bin_PROGRAMS = rtprof
rtprof_SOURCES =  main.c \
                  adt_graph.c \
                  adt_stack.c \
                  adt_symbol.c \
                  term_output.c \
                  lib_comms.c \
                  grph_vector.c \
                  grph_colourmap.c \
                  grph_primitive.c \
                  grph_layout.c \
                  grph_text.c \
                  grph_main.c

noinst_HEADERS = adt_graph.h \
                 com_common.h \
                 grph_layout.h \
                 grph_text.h \
                 term_output.h \
                 adt_stack.h \
                 grph_colourmap.h \
                 grph_main.h \
                 grph_vector.h \
                 adt_symbol.h \
                 grph_common.h \
                 grph_primitive.h \
                 lib_comms.h

